--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
 </head>
 <body>
     Herr Roland Fornvald ist online
-    <src>
-        https://live.staticflickr.com/2341/2226538765_47a4e90184_b.jpg
-        </src>
+    <img src="https://live.staticflickr.com/2341/2226538765_47a4e90184_b.jpg">
 </body>
 </html>
