--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     Herr Roland Fornvald ist online
-    <img src="https://live.staticflickr.com/2341/2226538765_47a4e90184_b.jpg">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/3/3d/Michael_Schumacher_2003_Silverstone_14.jpg">
 </body>
 </html>
