--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
         <title>My first website</title>
     </head>
     <body>
+    <article>
+        <h1>Amazing Results</h1>
+        <section>
+            <h2>Introduction</h2>
+            <p>
+                <span>Lol</span>
+            </p>
+        </section>
+    </article>
         Herr Roland Fornvald ist online
-        <img src="https://upload.wikimedia.org/wikipedia/commons/3/3d/Michael_Schumacher_2003_Silverstone_14.jpg">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/3/3d/Michael_Schumacher_2003_Silverstone_14.jpg" alt="success">
     </body>
 </html>
