added picture in index.html

--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
         <section>
             <h2>Introduction</h2>
             <p>
-                <span>Lol</span>
+                <span>This is a picture of Michael Schumacher during the 2003 Great Britain Grand Prix</span>
             </p>
         </section>
     </article>
-        Herr Roland Fornvald ist online
         <img src="https://upload.wikimedia.org/wikipedia/commons/3/3d/Michael_Schumacher_2003_Silverstone_14.jpg" alt="success">
     </body>
 </html>
