--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <section>
             <h2>Introduction</h2>
             <p>
-                <span>This is a picture of Michael Schumacher during the 2003 Great Britain Grand Prix</span>
+                <span>This is a picture of Michael Schumacher during the 2003 British Grand Prix</span>
             </p>
         </section>
     </article>
